--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="logo-container">
         <a href="ABOUT.html">
-            <img src="images/SKA_CULT.png" alt="SKA CULT">
+            <img src="images/SKA_CULT_SKULL.png" alt="SKA CULT">
         </a>
     </div>
 </body>
