--- a/ABOUT.html
+++ b/ABOUT.html
@@ -65,9 +65,8 @@
 <body>
     <div class="navbar">
         <a href="SKA_COC.html">Code of Conduct</a>
-        <a href="#" class="hidden-link">Link 2</a>
-        <a href="#" class="hidden-link">Link 3</a>
-        <a href="#" class="hidden-link">Link 4</a>
+        <a href="CULT_MUSIC.html">Cult Music</a>
+        <a href="CULT_TRUTHS">Cult Truths</a>
     </div>
     <div class="centered-content">
         <div class="centered-text">
