--- a/ABOUT.html
+++ b/ABOUT.html
@@ -63,11 +63,7 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="SKA_COC.html">Code of Conduct</a>
-        <a href="CULT_MUSIC.html">Cult Music</a>
-        <a href="CULT_TRUTHS">Cult Truths</a>
-    </div>
+    <!-- The navbar will be inserted here by the navbar.js script -->
     <div class="centered-content">
         <div class="centered-text">
             Embrace your checkered past
@@ -76,5 +72,6 @@
             <img src="images/SKA_CULT_SPLATTER.png" alt="SKA CULT Splatter">
         </div>
     </div>
+    <script src="navbar.js"></script>
 </body>
 </html>
