--- a/CULT_Truths.html
+++ b/CULT_Truths.html
@@ -26,4 +26,7 @@
             <li><strong>Respect and Etiquette</strong>: In our interactions within the Ska community and beyond, we promote respect, kindness, and understanding. We aim to conduct ourselves in a manner that reflects the positive values and spirit of Ska.</li>
             <li><strong>Unity Through Music</strong>: We affirm that Ska music is a powerful tool for unity and peace. We strive to use this music to bridge divides, bring people together, and create a more harmonious world.</li>
             <li><strong>The Eternal Beat</strong>: We believe in the timeless nature of Ska music — its ability to adapt, resonate, and inspire across generations. We commit to keeping the beat alive, ensuring that it continues to move and unite us all.</li>
-            <li><strong>The Ska Mission</strong>: Our mission is to spread the joy, unity, and message of Ska music to the world. We aim to create spaces where the S
+            <li><strong>The Ska Mission</strong>: Our mission is to spread the joy, unity, and message of Ska music to the world. We aim to create spaces where the Ska spirit can thrive and where people can come together in celebration of its rich cultural heritage and uplifting rhythms.</li>
+    <script src="navbar.js"></script>
+</body>
+</html>
