--- a/ABOUT.html
+++ b/ABOUT.html
@@ -4,63 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About SKA CULT</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            background-color: black;
-            color: white;
-            font-family: 'Arial', sans-serif;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            background-color: #333;
-            padding: 10px;
-        }
-
-        .navbar a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            margin-right: 10px; /* Space between links */
-        }
-
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        .centered-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 90vh; /* Adjust based on content size */
-        }
-
-        .centered-text {
-            text-align: center;
-            font-size: 24px; /* Adjust the font size as needed */
-            font-weight: bold; /* Makes the text bold */
-            margin-bottom: 20px; /* Adds space between text and image */
-        }
-
-        .centered-image {
-            text-align: center; /* Center the image */
-            display: flex;
-            justify-content: center;
-        }
-
-        .centered-image img {
-            max-width: 100%; /* Ensure image is not larger than its container */
-            max-height: 600px; /* Limit the maximum height of the image */
-            height: auto; /* Maintain aspect ratio */
-            width: auto; /* Maintain aspect ratio */
-        }
-    </style>
+    <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- The navbar will be inserted here by the navbar.js script -->
