--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKA CULT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- CSS file is linked correctly -->
 </head>
 <body>
+    <script src="navbar.js"></script> <!-- This line will insert your navigation bar -->
     <div class="logo-container">
         <a href="ABOUT.html">
             <img src="images/SKA_CULT_SKULL.png" alt="SKA CULT">
