--- a/SKA_COC.html
+++ b/SKA_COC.html
@@ -4,24 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ska Cult Code of Conduct</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-        }
-        h1, h2 {
-            color: #00897B;
-        }
-        p, li {
-            line-height: 1.6;
-        }
-        .content {
-            max-width: 800px;
-            margin: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
+    <script src="navbar.js"></script> <!-- This line will insert your navigation bar -->
     <div class="content">
         <h1>Ska Cult Code of Conduct</h1>
 
