--- a/CULT_TRUTHS.html
+++ b/CULT_TRUTHS.html
@@ -4,30 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statement of Fundamental Ska Truths</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
-    <header>
-        <h1>Statement of Fundamental Ska Truths</h1>
-    </header>
-    <main>
-        <p>This Statement of Fundamental Ska Truths is intended as a basis of fellowship among us, ensuring unity and shared understanding within the Ska Cult (i.e., that we all appreciate and live by the same musical and cultural ethos). The terminology employed here is not meant to be absolute or dogmatic, but the truths set forth are considered essential to our collective identity and full appreciation of Ska music and culture. This document does not encompass all truths about Ska but covers our need as to these fundamental elements.</p>
-        <ol>
-            <li><strong>The Rhythms Inspired</strong>: Our music, spanning from traditional Jamaican Ska to its modern evolutions, is the heart of our culture. It is inspired by our collective experiences and histories, serving as the authoritative rhythm of our community's faith in unity, joy, and social justice.</li>
-            <li><strong>The One True Beat</strong>: We acknowledge the beat of Ska as the foundation of our musical heritage — the offbeat rhythm that connects us, the drum that beats as our collective heart, the embodiment of our communal and diverse expressions.</li>
-            <li><strong>Unity in Diversity</strong>: Our community thrives on diversity, bringing together people of different backgrounds, beliefs, and cultures. We celebrate our differences, knowing they strengthen and enrich our collective experience and understanding of Ska music and its global impact.</li>
-            <li><strong>The Spirit of Ska</strong>: We recognize the spirit of Ska as a force for positivity, social change, and personal expression. It inspires us to face life's challenges with resilience and to seek joy and harmony in our interactions with others.</li>
-            <li><strong>Historical Roots and Cultural Respect</strong>: We honor the origins of Ska music in Jamaica and its journey across the world. We respect the cultural histories and the people who have contributed to this rich musical tradition.</li>
-            <li><strong>Community and Support</strong>: We commit to fostering a supportive, inclusive environment where all can share in the joy of Ska music. We stand together in solidarity, respect, and love, supporting one another in our collective and individual pursuits.</li>
-            <li><strong>Innovation and Evolution</strong>: While we respect and cherish the roots of Ska, we also embrace its evolution and the new styles and interpretations that each generation brings. We encourage creativity and open-mindedness in the expression of the Ska spirit.</li>
-            <li><strong>Social Awareness and Action</strong>: Ska music has a history of addressing social and political issues. We uphold this tradition by promoting awareness, encouraging informed dialogue, and taking action on social injustices.</li>
-            <li><strong>Education and Preservation</strong>: We are committed to educating ourselves and others about the history and cultural significance of Ska music. We strive to preserve its traditions while also encouraging new interpretations and evolutions.</li>
-            <li><strong>Global Ska Community</strong>: We recognize and celebrate the global nature of the Ska community. We are united by a shared love for this music and its values, transcending geographical and cultural boundaries.</li>
-            <li><strong>Joyful Expression and Participation</strong>: We believe in the power of Ska music to bring joy and inspiration. We encourage active participation, whether through playing music, dancing, or other forms of artistic expression, to keep the spirit of Ska alive.</li>
-            <li><strong>Respect and Etiquette</strong>: In our interactions within the Ska community and beyond, we promote respect, kindness, and understanding. We aim to conduct ourselves in a manner that reflects the positive values and spirit of Ska.</li>
-            <li><strong>Unity Through Music</strong>: We affirm that Ska music is a powerful tool for unity and peace. We strive to use this music to bridge divides, bring people together, and create a more harmonious world.</li>
-            <li><strong>The Eternal Beat</strong>: We believe in the timeless nature of Ska music — its ability to adapt, resonate, and inspire across generations. We commit to keeping the beat alive, ensuring that it continues to move and unite us all.</li>
-            <li><strong>The Ska Mission</strong>: Our mission is to spread the joy, unity, and message of Ska music to the world. We aim to create spaces where the Ska spirit can thrive and where people can come together in celebration of its rich cultural heritage and uplifting rhythms.</li>
-    <script src="navbar.js"></script>
+    <script src="navbar.js"></script> <!-- Insert the navigation bar at the top of the page -->
+    <main class="content">
+        <header>
+            <h1>Statement of Fundamental Ska Truths</h1>
+        </header>
+        <section>
+            <p>This Statement of Fundamental Ska Truths is intended as a basis of fellowship among us, ensuring unity and shared understanding within the Ska Cult (i.e., that we all appreciate and live by the same musical and cultural ethos). The terminology employed here is not meant to be absolute or dogmatic, but the truths set forth are considered essential to our collective identity and full appreciation of Ska music and culture. This document does not encompass all truths about Ska but covers our need as to these fundamental elements.</p>
+        </section>
+        <section>
+            <ol>
+                <!-- Your list items go here -->
+                <li><strong>The Rhythms Inspired</strong>: Our music, spanning from traditional Jamaican Ska to its modern evolutions, is the heart of our culture...</li>
+                <!-- Additional list items -->
+            </ol>
+        </section>
+    </main>
 </body>
 </html>
