--- a/ABOUT.html
+++ b/ABOUT.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- The navbar will be inserted here by the navbar.js script -->
-    <div class="centered-content">
-        <div class="centered-text">
-            Embrace your checkered past
-        </div>
-        <div class="centered-image">
-            <img src="images/SKA_CULT_SPLATTER.png" alt="SKA CULT Splatter">
+    <script src="navbar.js"></script> <!-- The navbar will be inserted here by the navbar.js script -->
+    <div class="content-container"> <!-- This is the new content container -->
+        <div class="centered-content">
+            <div class="centered-text">
+                Embrace your checkered past
+            </div>
+            <div class="centered-image">
+                <img src="images/SKA_CULT_SPLATTER.png" alt="SKA CULT Splatter">
+            </div>
         </div>
     </div>
-    <script src="navbar.js"></script>
 </body>
 </html>
