--- a/CULT_MUSIC.html
+++ b/CULT_MUSIC.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cult Music</title>
-    <link rel="stylesheet" href="style.css"> <!-- Ensure you have a link to your CSS file for styling -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file for styling -->
 </head>
 <body>
     <script src="navbar.js"></script> <!-- This will insert your navigation bar -->
-    <div class="content">
-        <h1>Cult Music Playlist</h1>
-        <iframe src="https://www.youtube.com/embed/videoseries?list=PLfIebOG3ItL2GYWFEW7aJiWM8z_QLbwxS" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+    <div class="content-container"> <!-- Using the new content container -->
+        <div class="content">
+            <h1>Cult Music Playlist</h1>
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLfIebOG3ItL2GYWFEW7aJiWM8z_QLbwxS" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 </html>
