--- a/CULT_TRUTHS.html
+++ b/CULT_TRUTHS.html
@@ -8,20 +8,22 @@
 </head>
 <body>
     <script src="navbar.js"></script> <!-- Insert the navigation bar at the top of the page -->
-    <main class="content">
-        <header>
-            <h1>Statement of Fundamental Ska Truths</h1>
-        </header>
-        <section>
-            <p>This Statement of Fundamental Ska Truths is intended as a basis of fellowship among us, ensuring unity and shared understanding within the Ska Cult (i.e., that we all appreciate and live by the same musical and cultural ethos). The terminology employed here is not meant to be absolute or dogmatic, but the truths set forth are considered essential to our collective identity and full appreciation of Ska music and culture. This document does not encompass all truths about Ska but covers our need as to these fundamental elements.</p>
-        </section>
-        <section>
-            <ol>
-                <!-- Your list items go here -->
-                <li><strong>The Rhythms Inspired</strong>: Our music, spanning from traditional Jamaican Ska to its modern evolutions, is the heart of our culture...</li>
-                <!-- Additional list items -->
-            </ol>
-        </section>
-    </main>
+    <div class="content-container"> <!-- Wrap your main content with content-container for consistent styling -->
+        <main class="content">
+            <header>
+                <h1>Statement of Fundamental Ska Truths</h1>
+            </header>
+            <section>
+                <p>This Statement of Fundamental Ska Truths is intended as a basis of fellowship among us, ensuring unity and shared understanding within the Ska Cult (i.e., that we all appreciate and live by the same musical and cultural ethos). The terminology employed here is not meant to be absolute or dogmatic, but the truths set forth are considered essential to our collective identity and full appreciation of Ska music and culture. This document does not encompass all truths about Ska but covers our need as to these fundamental elements.</p>
+            </section>
+            <section>
+                <ol>
+                    <!-- Your list items go here -->
+                    <li><strong>The Rhythms Inspired</strong>: Our music, spanning from traditional Jamaican Ska to its modern evolutions, is the heart of our culture...</li>
+                    <!-- Additional list items -->
+                </ol>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
