--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <script src="navbar.js"></script> <!-- This line will insert your navigation bar -->
-    <div class="logo-container">
+    <div class="content-container"> <!-- Wrap content with the content-container for consistent styling -->
+        <div class="logo-container">
             <img src="images/SKA_CULT_SKULL.png" alt="SKA CULT">
-        </a>
+        </div>
     </div>
 </body>
 </html>
