--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <script src="navbar.js"></script> <!-- This line will insert your navigation bar -->
     <div class="content-container"> <!-- Wrap content with the content-container for consistent styling -->
         <div class="logo-container">
+             <a href="RUDEBOY_RESOLUTIONS.html">
             <img src="images/SKA_CULT_SKULL.png" alt="SKA CULT">
+             </a>
+              <a href="RUDEBOY_RESOLUTIONS.html">
+                <p>How can I experience Skalvation?</p>
+            </a>
         </div>
     </div>
 </body>
