--- a/RUDEBOY_RESOLUTIONS.html
+++ b/RUDEBOY_RESOLUTIONS.html
@@ -12,16 +12,16 @@
         <div class="centered-content">
             <h2>Rudeboy Resolutions:</h2>
             <ul class="resolutions-list">
-                <li>Dress sharply but think sharper: Challenge stereotypes and prejudice.</li>
-                <li>Move to the rhythm, but also move against injustice.</li>
-                <li>Keep the faith in the face of adversity.</li>
-                <li>Speak out for those without a voice.</li>
-                <li>Skank with pride, stand with dignity.</li>
-                <li>Remember the roots, but water the future.</li>
-                <li>Build bridges, not walls, with the beats.</li>
-                <li>Respect all, but bow to none unjustly.</li>
-                <li>Carry the message of Ska — unity and joy — everywhere.</li>
-                <li>Never forget: The battle against inequality is fought on the dancefloor and beyond.</li>
+                <h3>Dress sharply but think sharper: Challenge stereotypes and prejudice.</h3>
+                <h3>Move to the rhythm, but also move against injustice.</h3>
+                <h3>Keep the faith in the face of adversity.</h3>
+                <h3>Speak out for those without a voice.</h3>
+                <h3>Skank with pride, stand with dignity.</h3>
+                <h3>Remember the roots, but water the future.</h3>
+                <h3>Build bridges, not walls, with the beats.</h3>
+                <h3>Respect all, but bow to none unjustly.</h3>
+                <h3>Carry the message of Ska — unity and joy — everywhere.</h3>
+                <h3>Never forget: The battle against inequality is fought on the dancefloor and beyond.</h3>
             </ul>
         </div>
     </div>
