--- a/RUDEBOY_RESOLUTIONS.html
+++ b/RUDEBOY_RESOLUTIONS.html
@@ -3,27 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rudeboy Resolutions</title>
+    <title>Your Path to Skalvation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script src="navbar.js"></script>
-    <div class="content-container">
-        <div class="centered-content">
-            <h2>Rudeboy Resolutions:</h2>
-            <ul class="resolutions-list">
-                <h3>1. Dress sharply but think sharper: Challenge stereotypes and prejudice.</h3>
-                <h3>2. Move to the rhythm, but also move against injustice.</h3>
-                <h3>3. Keep the faith in the face of adversity.</h3>
-                <h3>4. Speak out for those without a voice.</h3>
-                <h3>5. Skank with pride, stand with dignity.</h3>
-                <h3>6. Remember the roots, but water the future.</h3>
-                <h3>7. Build bridges, not walls, with the beats.</h3>
-                <h3>8. Respect all, but bow to none unjustly.</h3>
-                <h3>9. Carry the message of Ska — unity and joy — everywhere.</h3>
-                <h3>10. Never forget: The battle against inequality is fought on the dancefloor and beyond.</h3>
+    <div class="navbar"></div> <!-- Assuming navbar.js will populate this div -->
+    
+    <main>
+        <h1>Your Path to Skalvation</h1>
+        <div class="content">
+            <ul class="skalvation-path">
+                <li><strong>Sola Skalvation:</strong> Solely Through the Beat. Embrace the beat as the sole path to Skalvation, letting the Ska rhythm resonate within and foster a life of harmony and celebration.</li>
+                <li><strong>Sola Skanktification:</strong> Solely Through the Movement. Achieve personal growth and positive living through the energetic movement to the Ska rhythm, embodying the dance's spirit.</li>
+                <li><strong>Sola Rudeboy:</strong> Solely Through the Ethos. Embrace the Rudeboy ethos as the sole guide for actions, demanding respect, justice, and solidarity, inspired by the Ska tradition.</li>
+                <li><strong>Sola Synchronicity:</strong> Solely Through Unity. Harmony in society is achieved through unity and respect for diversity, much like the different instruments in Ska coming together for a vibrant sound.</li>
+                <li><strong>Sola Skaspel:</strong> Solely Through the Message. Spread the core message of peace, love, and unity found in Ska music, contributing to a global rhythm of togetherness.</li>
             </ul>
         </div>
-    </div>
+    </main>
 </body>
 </html>
