--- a/RUDEBOY_RESOLUTIONS.html
+++ b/RUDEBOY_RESOLUTIONS.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore the fundamental beliefs and practices on your path to Skalvation through the Ska culture.">
     <title>Your Path to Skalvation</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" integrity="sha384-..." crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="path/to/favicon.png">
 </head>
 <body>
-    <script src="navbar.js"></script>
-    <div class="navbar"></div> <!-- Assuming navbar.js will populate this div -->
-    
-    <main>
-        <h1>Your Path to Skalvation</h1>
-        <div class="content">
+    <header>
+        <!-- The navbar will be inserted here by the navbar.js script -->
+        <div class="navbar"></div> <!-- Assuming navbar.js will populate this div -->
+    </header>
+    <main class="content-container">
+        <section class="skalvation-content">
+            <h1>Your Path to Skalvation</h1>
             <ul class="skalvation-path">
                 <li><strong>Sola Skalvation:</strong> Solely Through the Beat. Embrace the beat as the sole path to Skalvation, letting the Ska rhythm resonate within and foster a life of harmony and celebration.</li>
                 <li><strong>Sola Skanktification:</strong> Solely Through the Movement. Achieve personal growth and positive living through the energetic movement to the Ska rhythm, embodying the dance's spirit.</li>
@@ -20,7 +23,11 @@
                 <li><strong>Sola Synchronicity:</strong> Solely Through Unity. Harmony in society is achieved through unity and respect for diversity, much like the different instruments in Ska coming together for a vibrant sound.</li>
                 <li><strong>Sola Skaspel:</strong> Solely Through the Message. Spread the core message of peace, love, and unity found in Ska music, contributing to a global rhythm of togetherness.</li>
             </ul>
-        </div>
+        </section>
     </main>
+    <footer>
+        <!-- Footer content here -->
+    </footer>
+    <script src="navbar.js" defer></script>
 </body>
 </html>
