--- a/RUDEBOY_RESOLUTIONS.html
+++ b/RUDEBOY_RESOLUTIONS.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore the fundamental beliefs and practices on your path to Skalvation through the Ska culture.">
     <title>Your Path to Skalvation</title>
-    <link rel="stylesheet" href="style.css" integrity="sha384-..." crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="path/to/favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <!-- The navbar will be inserted here by the navbar.js script -->
-        <div class="navbar"></div> <!-- Assuming navbar.js will populate this div -->
-    </header>
-    <main class="content-container">
-        <section class="skalvation-content">
-            <h1>Your Path to Skalvation</h1>
+    <script src="navbar.js"></script>
+    <div class="navbar"></div> <!-- Assuming navbar.js will populate this div -->
+    
+    <main>
+        <h1>Your Path to Skalvation</h1>
+        <div class="content">
             <ul class="skalvation-path">
-                <li><strong>Sola Skalvation:</strong> Solely Through the Beat. Embrace the beat as the sole path to Skalvation, letting the Ska rhythm resonate within and foster a life of harmony and celebration.</li>
-                <li><strong>Sola Skanktification:</strong> Solely Through the Movement. Achieve personal growth and positive living through the energetic movement to the Ska rhythm, embodying the dance's spirit.</li>
-                <li><strong>Sola Rudeboy:</strong> Solely Through the Ethos. Embrace the Rudeboy ethos as the sole guide for actions, demanding respect, justice, and solidarity, inspired by the Ska tradition.</li>
-                <li><strong>Sola Synchronicity:</strong> Solely Through Unity. Harmony in society is achieved through unity and respect for diversity, much like the different instruments in Ska coming together for a vibrant sound.</li>
-                <li><strong>Sola Skaspel:</strong> Solely Through the Message. Spread the core message of peace, love, and unity found in Ska music, contributing to a global rhythm of togetherness.</li>
+                <li>
+                    <h2>Sola Skalvation:</h2>
+                    <p>Solely Through the Beat. Embrace the beat as the sole path to Skalvation, letting the Ska rhythm resonate within and foster a life of harmony and celebration.</p>
+                </li>
+                <li>
+                    <h2>Sola Skanktification:</h2>
+                    <p>Solely Through the Movement. Achieve personal growth and positive living through the energetic movement to the Ska rhythm, embodying the dance's spirit.</p>
+                </li>
+                <li>
+                    <h2>Sola Rudeboy:</h2>
+                    <p>Solely Through the Ethos. Embrace the Rudeboy ethos as the sole guide for actions, demanding respect, justice, and solidarity, inspired by the Ska tradition.</p>
+                </li>
+                <li>
+                    <h2>Sola Synchronicity:</h2>
+                    <p>Solely Through Unity. Harmony in society is achieved through unity and respect for diversity, much like the different instruments in Ska coming together for a vibrant sound.</p>
+                </li>
+                <li>
+                    <h2>Sola Skaspel:</h2>
+                    <p>Solely Through the Message. Spread the core message of peace, love, and unity found in Ska music, contributing to a global rhythm of togetherness.</p>
+                </li>
             </ul>
-        </section>
+        </div>
     </main>
-    <footer>
-        <!-- Footer content here -->
-    </footer>
-    <script src="navbar.js" defer></script>
 </body>
 </html>
