--- a/CULT_MUSIC.html
+++ b/CULT_MUSIC.html
@@ -3,15 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cult Music</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file for styling -->
+    <title>Ska Cult Music Videos</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        .video-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px; /* Adjust the space between videos */
+            margin: 20px;
+        }
+        .video-wrapper {
+            width: 100%;
+            max-width: 560px; /* Adjust based on your preferred maximum size */
+            margin: 10px 0;
+        }
+        .video-wrapper iframe {
+            width: 100%;
+            height: 315px; /* Adjust height based on aspect ratio */
+        }
+        .video-title {
+            text-align: center;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <script src="navbar.js"></script> <!-- This will insert your navigation bar -->
-    <div class="content-container"> <!-- Using the new content container -->
-        <div class="content">
-            <h1>Cult Music Playlist</h1>
-            <iframe src="https://www.youtube.com/embed/videoseries?list=PLfIebOG3ItL2GYWFEW7aJiWM8z_QLbwxS" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+    <div class="content-container">
+        <div class="video-container">
+            <div class="video-wrapper">
+                <h2 class="video-title">Video Title Here</h2>
+                <iframe src="https://www.youtube.com/embed/bBWrbEUu3nk?si=dly_G9D3UgymdgNW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <!-- Repeat for each video -->
         </div>
     </div>
 </body>
