--- a/CULT_MUSIC.html
+++ b/CULT_MUSIC.html
@@ -33,7 +33,7 @@
     <div class="content-container">
         <div class="video-container">
             <div class="video-wrapper">
-                <h2 class="video-title">Video Title Here</h2>
+                <h2 class="video-title">The Specials - You're Wondering Now</h2>
                 <iframe src="https://www.youtube.com/embed/bBWrbEUu3nk?si=dly_G9D3UgymdgNW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <!-- Repeat for each video -->
